
5.1.0 -> 5.2a0:
    - jbj: splint: annotate argvAppend differently.
    - jbj: hdrfmt: return failure if PACKAGE{ORIGIN,DIGEST} do not exist.
    - afb: standalone: file "magic" was installed in wrong directory
    - afb: fix VPATH builds finding rpmversion.h (in perl, with MakeMaker)
    - afb: fix VPATH builds finding rpmversion.h (in python)
    - afb: internal liblzma was not properly in autoconf/automake
    - afb: fix VPATH builds of lua finding "system.h" from popt (not rpm)
    - afb: fix VPATH builds finding rpmversion.h (in tools)
    - jbj: fix: rpm-python h['filenames'] needs tagName(0x54aafb71) to
	return "Filenames" in order to find the filepathsTag extension.
    - jbj: add enabler options to chase down headerLoad() hot-spots.
    - jbj: add a missing newline to a debug message.
    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
	in rpmtsFindPubkey instead.
    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
	open in rpmtsFindPubkey.
    - jbj: add :rpn formatter to do simple arithemetic on input.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: insure no access before buffer if fgets(3) returns NUL.
    - jbj: tevr: add missing level of ht indirection, free input strings.
    - jbj: fix: --triggers segfault, don't depend on he->p.ptr = NULL after
	headerGet() failed return.
    - jbj: try ":foo" == extractor, "|foo" == transformer, format extensions.
    - jbj: permit :stat(foo) extraction from RPMTAG_PACKAGESTAT.
    - jbj: add RPMTAG_PACKAGESTAT, and store persistently in a rpmdb Header.
    - jbj: rpmrepo: achieve {primary,filelists,other}.xml spew parity w createrepo.
    - jbj: rpmrepo: compute origin *.rpm file digest while reading.
    - jbj: preserve stat(2) & digest through headerReload().
    - jbj: get rid of copy-n-paste typos, add "l" type markers to rpmtag.h.
    - jbj: add RPMTAG_PACKAGEDIGEST extension as RPM_STRING_TYPE.